--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,139 @@
 @import "tailwindcss";
+
+@theme {
+  /* completly disable tailwind default theme variables*/
+  --*: initial;
+
+  /* colors */
+  --color-neutral-900: #02012c;
+  --color-neutral-800: #262540;
+  --color-neutral-700: #302f4a;
+  --color-neutral-600: #3c3b5e;
+  --color-neutral-300: #acacb7;
+  --color-neutral-200: #d4d3d9;
+  --color-neutral-0: #ffffff;
+  --color-orange-500: #ff820a;
+  --color-blue-700: #2b1b9c;
+  --color-blue-500: #4658d9;
+
+  /* spacing */
+  --spacing-0: 0rem;
+  --spacing-025: 0.125rem;
+  --spacing-050: 0.25rem;
+  --spacing-075: 0.375rem;
+  --spacing-100: 0.5rem;
+  --spacing-125: 0.625rem;
+  --spacing-150: 0.75rem;
+  --spacing-200: 1rem;
+  --spacing-250: 1.25rem;
+  --spacing-300: 1.5rem;
+  --spacing-400: 2rem;
+  --spacing-500: 2.5rem;
+  --spacing-600: 3rem;
+  --spacing-800: 4rem;
+  --spacing-1000: 5rem;
+  --spacing-1200: 6rem;
+  --spacing-1400: 7rem;
+  --spacing-1600: 8rem;
+  --spacing-1800: 8.75rem;
+
+  /* radius */
+  --radius-0: 0rem;
+  --radius-4: 0.25rem;
+  --radius-6: 0.375rem;
+  --radius-8: 0.5rem;
+  --radius-10: 0.625rem;
+  --radius-12: 0.75rem;
+  --radius-16: 1rem;
+  --radius-20: 1.25rem;
+  --radius-24: 1.5rem;
+  --radius-full: 62.4375rem;
+}
+
+@layer components {
+  /* Text presets */
+  :is(
+    .text-preset-1,
+    .text-preset-3,
+    .text-preset-4,
+    .text-preset-5,
+    .text-preset-5-medium,
+    .text-preset-6,
+    .text-preset-7,
+    .text-preset-8,
+
+  ) {
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+  }
+
+  :is(.text-preset-2) {
+    font-family: "Bricolage Grotesque", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+  }
+
+  .text-preset-1 {
+    font-style: italic;
+    font-weight: 600;
+    font-size: 6rem;
+    line-height: 1;
+    letter-spacing: -0.125rem;
+  }
+
+  .text-preset-2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3.25rem;
+    line-height: 1.2;
+  }
+
+  .text-preset-3 {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 2rem;
+    line-height: 1;
+  }
+
+  .text-preset-4 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.75rem;
+    line-height: 1.2;
+  }
+
+  .text-preset-5 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1.25rem;
+    line-height: 1.2;
+  }
+
+  .text-preset-5-medium {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.25rem;
+    line-height: 1.2;
+  }
+
+  .text-preset-6 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.125rem;
+    line-height: 1.2;
+  }
+
+  .text-preset-7 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1.2;
+  }
+
+  .text-preset-8 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.2;
+  }
+}
