feat(skeletonLoading): implement skeleton loading
- add skeleton loading markup for DailyForecast, HourlyForecast and WeatherInfo
- add useImagePreloader hook to preload and cach a list of images after inital render, this causes next user interactions to be more fluent
- render WeatherInfo, HourlyForecast and DailyForecast conditionally based on data availability, thus update these components to remove returns checking for data.
- remove TODO comments related to  skeleton loading
- pass resetAppData function down to SearchDropdown component to reset all app data after user selects a new city
- add a new showSkeleton state to app to decide weather to show skeleton loading if data is not yet ready
- add a minimum duration of 500ms to always show skeleton loading to prevent flickering
- add a global class for pulse animation for skeleton elements
- add netlify.toml config file and set Cache-Control headers for image resources to a 1 year duration. this prevents images loaded to be re-validated by browser and avoids browser sending validation requests during user's interaction with app

--- a/src/App.css
+++ b/src/App.css
@@ -160,3 +160,17 @@
 .animate-spin {
   animation: spin 1s linear infinite;
 }
+
+@keyframes pulse-skeleton {
+  0%,
+  100% {
+    background-color: var(--color-neutral-800);
+  }
+  50% {
+    background-color: var(--color-neutral-700);
+  }
+}
+
+.animate-pulse-skeleton {
+  animation: pulse-skeleton 1.5s infinite ease-in-out;
+}
