--- a/src/App.css
+++ b/src/App.css
@@ -174,3 +174,28 @@
 .animate-pulse-skeleton {
   animation: pulse-skeleton 1.5s infinite ease-in-out;
 }
+
+/* For Firefox */
+html {
+  scrollbar-width: auto;
+  scrollbar-color: var(--color-neutral-600) var(--color-neutral-800);
+}
+
+/* For Webkit browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: var(--spacing-100);
+}
+
+::-webkit-scrollbar-track {
+  background: var(--color-neutral-800);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-neutral-600);
+  border-radius: var(--radius-full);
+  border: 3px solid var(--color-neutral-800);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-neutral-300);
+}
